--- a/tmux.conf
+++ b/tmux.conf
@@ -4,23 +4,23 @@
 set -g prefix C-q
 
 # Statusbar colours.
-set-option -g status-bg colour64 # green
-set-option -g status-fg colour230 # base3
+set-option -g status-bg colour3
+set-option -g status-fg colour0
 set-option -g status-attr default
 
 # Window title colours.
-set-window-option -g window-status-fg colour234 # base03
+set-window-option -g window-status-fg colour0
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # Active window title colours.
-set-window-option -g window-status-current-fg colour125 # magenta
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg colour0
+set-window-option -g window-status-current-bg colour0
 #set-window-option -g window-status-current-attr bright
 
 # Pane border.
-set-option -g pane-border-fg colour64 # green
-set-option -g pane-active-border-fg colour166 # orange
+set-option -g pane-border-fg colour4
+set-option -g pane-active-border-fg colour1
 
 # Message text.
 set-option -g message-bg colour235 # base02
@@ -31,14 +31,12 @@ set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
 # Clock
-set-window-option -g clock-mode-colour colour64 # green
+set-window-option -g clock-mode-colour colour1
 
 set-window-option -g mode-keys vi
 set-window-option -g mode-mouse off
-set-window-option -g window-status-current-bg cyan
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-attr 'bold'
-set-window-option -g window-status-current-attr 'bold'
+set-window-option -g window-status-current-bg colour1
+set-window-option -g window-status-current-fg colour13
 
 set -g default-terminal "screen-256color"
 set -g history-limit 60000
