Tweak colours and stuff
Signed-off-by: Kyrylo Silin <kyrylosilin@gmail.com>

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -99,20 +99,20 @@ bar_more = 0
 chat = default
 chat_bg = default
 chat_buffer = default
-chat_channel = 61
+chat_channel = 3
 chat_delimiters = 244
 chat_highlight = 234
 chat_highlight_bg = 166
 chat_host = 37
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
-chat_nick = default
-chat_nick_colors = "226,214,207,193,168,154,113,110,108,107,106,105,85,82,70,65,63,49,48,40,36,33,28"
+chat_nick = red
+chat_nick_colors = "1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,35,38,107,58,118,122,130,203"
 chat_nick_offline = darkgray
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = darkgray
 chat_nick_other = default
-chat_nick_self = 254
+chat_nick_self = 255
 chat_prefix_action = white
 chat_prefix_buffer = 186
 chat_prefix_buffer_inactive_buffer = darkgray
@@ -187,14 +187,14 @@ path = "%h/plugins"
 save_config_on_unload = on
 
 [bar]
-buffers.color_bg = default
+buffers.color_bg = 0
 buffers.color_delim = default
 buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = horizontal
 buffers.hidden = off
-buffers.items = "buffers"
+buffers.items = "lag,buffers,buffer_nicklist_count,buffer_title"
 buffers.position = top
 buffers.priority = 0
 buffers.separator = off
@@ -243,13 +243,13 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = 64
+title.color_bg = 0
 title.color_delim = cyan
 title.color_fg = 230
 title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
-title.hidden = off
+title.hidden = on
 title.items = "[lag],buffer_title"
 title.position = top
 title.priority = 500
