More awesome colour tweaks
Signed-off-by: Kyrylo Silin <kyrylosilin@gmail.com>

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -78,7 +78,7 @@ prefix_same_nick = ""
 prefix_suffix = " "
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "░"
+read_marker_string = "-"
 save_config_on_exit = on
 save_layout_on_exit = none
 scroll_amount = 3
@@ -101,8 +101,8 @@ chat_bg = default
 chat_buffer = default
 chat_channel = 3
 chat_delimiters = 244
-chat_highlight = 234
-chat_highlight_bg = 166
+chat_highlight = 220
+chat_highlight_bg = default
 chat_host = 37
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
@@ -122,7 +122,7 @@ chat_prefix_more = lightmagenta
 chat_prefix_network = 159
 chat_prefix_quit = 245
 chat_prefix_suffix = 64
-chat_read_marker = 64
+chat_read_marker = 4
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
