Add a cool popup thingie
No time to explain!

Thanks-to: Ryan King <rkingithub@sharpsaw.org>
Signed-off-by: Kyrylo Silin <kyrylosilin@gmail.com>

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -101,8 +101,8 @@ chat_bg = default
 chat_buffer = default
 chat_channel = 3
 chat_delimiters = 244
-chat_highlight = 220
-chat_highlight_bg = default
+chat_highlight = 15
+chat_highlight_bg = 1
 chat_host = 37
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
