Add git-aliae submodule
Signed-off-by: Kyrylo Silin <kyrylosilin@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vim/bundle/autoclose"]
 	path = vim/bundle/autoclose
 	url = git://github.com/vim-scripts/AutoClose.git
+[submodule "git-aliae"]
+	path = git-aliae
+	url = git@github.com:ConradIrwin/git-aliae.git
