--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ set-window-option -g window-status-bg default
 
 # Active window title colours.
 set-window-option -g window-status-current-fg colour0
-set-window-option -g window-status-current-bg colour0
+set-window-option -g window-status-current-bg colour211
 #set-window-option -g window-status-current-attr bright
 
 # Pane border.
@@ -23,20 +23,18 @@ set-option -g pane-border-fg colour4
 set-option -g pane-active-border-fg colour1
 
 # Message text.
-set-option -g message-bg colour235 # base02
-set-option -g message-fg colour254 # base2
+set-option -g message-bg colour235
+set-option -g message-fg colour254
 
 # Pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-active-colour colour33
+set-option -g display-panes-colour colour166
 
 # Clock
 set-window-option -g clock-mode-colour colour1
 
 set-window-option -g mode-keys vi
 set-window-option -g mode-mouse off
-set-window-option -g window-status-current-bg colour1
-set-window-option -g window-status-current-fg colour13
 
 set -g default-terminal "screen-256color"
 set -g history-limit 60000
