weechat.conf: update

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -212,7 +212,7 @@ input.items = "[input_prompt]+(away),[input_search],[input_paste],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
-input.size = 1
+input.size = 0
 input.size_max = 0
 input.type = window
 nicklist.color_bg = default
@@ -472,6 +472,7 @@ meta-k = "/input grab_key_command"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
+meta-s = "/input return"
 meta-u = "/input scroll_unread"
 meta-wmeta-meta2-A = "/window up"
 meta-wmeta-meta2-B = "/window down"
