--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,9 @@
 [submodule "vim/bundle/align"]
 	path = vim/bundle/align
 	url = git@github.com:vim-scripts/Align.git
+[submodule "vim/bundle/fuzzy-finder"]
+	path = vim/bundle/fuzzy-finder
+	url = https://github.com/vim-scripts/FuzzyFinder.git
+[submodule "vim/bundle/l9"]
+	path = vim/bundle/l9
+	url = https://github.com/vim-scripts/L9.git
