--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/l9"]
 	path = vim/bundle/l9
 	url = https://github.com/vim-scripts/L9.git
+[submodule "emacs.d/themes/monochrome"]
+	path = emacs.d/themes/monochrome
+	url = git://github.com/fxn/monochrome-theme.el.git
