Tweak colours and the default browser
Luakit is good, but Chromium is better.

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,18 +4,18 @@
 set -g prefix C-q
 
 # Statusbar colours.
-set-option -g status-bg colour3
-set-option -g status-fg colour0
+set-option -g status-bg colour0
+set-option -g status-fg colour175
 set-option -g status-attr default
 
 # Window title colours.
-set-window-option -g window-status-fg colour0
+set-window-option -g window-status-fg colour244
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # Active window title colours.
-set-window-option -g window-status-current-fg colour0
-set-window-option -g window-status-current-bg colour211
+set-window-option -g window-status-current-fg colour215
+set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # Pane border.
