--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -45,3 +45,17 @@ python.colorize_nicks.blacklist_nicks = "so,root"
 python.colorize_nicks.min_nick_length = "2"
 ruby.check_license = "off"
 tcl.check_license = "off"
+
+[desc]
+perl.multiline.char = "character(s) which should be displayed to indicate end of line"
+perl.multiline.hide_magic_nl = "whether the new line inserted by magic enter key will be hidden"
+perl.multiline.ipl = "this setting controls override of ctrl-M (enter key) by script. Turn it off if you don't want multiline.pl to set and re-set the key binding."
+perl.multiline.lead_linebreak = "if turned on, multi-line messages always start on a new line"
+perl.multiline.magic = "indicator displayed when message will be sent soon"
+perl.multiline.magic_enter_time = "delay after pressing enter before sending automatically (in ms), or 0 to disable"
+perl.multiline.magic_paste_only = "only use multi-line messages for multi-line pastes (multi-line on enter is disabled by this)"
+perl.multiline.modify_keys = "if turned on, cursor keys are modified so that they respect line boundaries instead of treating the whole multi-line message as a single line"
+perl.multiline.paste_lock = "time-out to detect pastes (disable the weechat built-in paste detection if you want to use this)"
+perl.multiline.send_empty = "set to on to automatically disregard enter key on empty line"
+perl.multiline.tab = "character(s) which should be displayed instead of Tab key character"
+perl.multiline.weechat_paste_fix = "disable ctrl-J binding when paste is detected to stop silly weechat sending out pastes without allowing to edit them"
