plugins.conf: update

--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -4,6 +4,7 @@
 
 [var]
 fifo.fifo = "on"
+guile.check_license = "off"
 lua.check_license = "off"
 perl.buffers.color_current = "lightcyan,red"
 perl.buffers.color_default = "default"
