--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -6,20 +6,20 @@
 fifo.fifo = "on"
 guile.check_license = "off"
 lua.check_license = "off"
-perl.buffers.color_current = "lightcyan,red"
-perl.buffers.color_default = "default"
+perl.buffers.color_current = "2"
+perl.buffers.color_default = "4"
 perl.buffers.color_hotlist_highlight = "magenta"
-perl.buffers.color_hotlist_low = "white"
-perl.buffers.color_hotlist_message = "yellow"
-perl.buffers.color_hotlist_private = "lightgreen"
-perl.buffers.color_number = "lightgreen"
+perl.buffers.color_hotlist_low = "4"
+perl.buffers.color_hotlist_message = "3"
+perl.buffers.color_hotlist_private = "1"
+perl.buffers.color_number = "4"
 perl.buffers.color_whitelist_buffers = ""
 perl.buffers.color_whitelist_default = ""
 perl.buffers.color_whitelist_highlight = ""
 perl.buffers.color_whitelist_low = ""
 perl.buffers.color_whitelist_message = ""
 perl.buffers.color_whitelist_private = ""
-perl.buffers.hide_merged_buffers = "off"
+perl.buffers.hide_merged_buffers = "on"
 perl.buffers.indenting = "on"
 perl.buffers.indenting_number = "on"
 perl.buffers.short_names = "on"
