weechat/{plugins.conf,weechat.conf}: readjust colours again

--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -6,11 +6,11 @@
 fifo.fifo = "on"
 guile.check_license = "off"
 lua.check_license = "off"
-perl.buffers.color_current = "2"
-perl.buffers.color_default = "4"
+perl.buffers.color_current = "7,2"
+perl.buffers.color_default = "15"
 perl.buffers.color_hotlist_highlight = "magenta"
 perl.buffers.color_hotlist_low = "4"
-perl.buffers.color_hotlist_message = "3"
+perl.buffers.color_hotlist_message = "2"
 perl.buffers.color_hotlist_private = "1"
 perl.buffers.color_number = "4"
 perl.buffers.color_whitelist_buffers = ""
@@ -23,7 +23,7 @@ perl.buffers.hide_merged_buffers = "on"
 perl.buffers.indenting = "on"
 perl.buffers.indenting_number = "on"
 perl.buffers.short_names = "on"
-perl.buffers.show_number = "on"
+perl.buffers.show_number = "off"
 perl.buffers.show_prefix = "off"
 perl.buffers.show_prefix_empty = "on"
 perl.buffers.sort = "number"
