--- a/mpd.conf
+++ b/mpd.conf
@@ -6,6 +6,9 @@ pid_file			"~/.mpd/pid"
 state_file			"~/.mpd/state"
 sticker_file			"~/.mpd/sticker.sql"
 
+filesystem_charset		"UTF-8"
+bind_to_address "127.0.0.1"
+
 input {
         plugin "curl"
 #       proxy "proxy.isp.com:8080"
@@ -22,5 +25,3 @@ audio_output {
 ##	mixer_control	"PCM"		# optional
 ##	mixer_index	"0"		# optional
 }
-
-filesystem_charset		"UTF-8"
