--- a/.gitmodules
+++ b/.gitmodules
@@ -2,74 +2,74 @@
 #                 https://github.com/kyrylo/dot
 #                                              <-- kyrylosilin@gmail.com
 [submodule "vim/bundle/nerdtree"]
-	path = vim/bundle/nerdtree
+	path = cfg/vim/bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
 [submodule "vim/bundle/supertab"]
-	path = vim/bundle/supertab
+	path = cfg/vim/bundle/supertab
 	url = git://github.com/ervandew/supertab.git
 [submodule "vim/bundle/endwise"]
-	path = vim/bundle/endwise
+	path = cfg/vim/bundle/endwise
 	url = git://github.com/tpope/vim-endwise.git
 [submodule "vim/bundle/indent-guides"]
-	path = vim/bundle/indent-guides
+	path = cfg/vim/bundle/indent-guides
 	url = git://github.com/nathanaelkane/vim-indent-guides.git
 [submodule "vim/bundle/nerdcommenter"]
-	path = vim/bundle/nerdcommenter
+	path = cfg/vim/bundle/nerdcommenter
 	url = git://github.com/scrooloose/nerdcommenter.git
 [submodule "vim/bundle/ragtag"]
-	path = vim/bundle/ragtag
+	path = cfg/vim/bundle/ragtag
 	url = git://github.com/tpope/vim-ragtag.git
 [submodule "vim/bundle/surround"]
-	path = vim/bundle/surround
+	path = cfg/vim/bundle/surround
 	url = git://github.com/tpope/vim-surround.git
 [submodule "vim/bundle/mac-classic"]
-	path = vim/bundle/mac-classic
+	path = cfg/vim/bundle/mac-classic
 	url = git://github.com/nelstrom/vim-mac-classic-theme.git
 [submodule "vim/bundle/xoria256"]
-	path = vim/bundle/xoria256
+	path = cfg/vim/bundle/xoria256
 	url = git://github.com/vim-scripts/xoria256.vim.git
 [submodule "vim/bundle/haml"]
-	path = vim/bundle/haml
+	path = cfg/vim/bundle/haml
 	url = git://github.com/tpope/vim-haml.git
 [submodule "vim/bundle/haskell"]
-	path = vim/bundle/haskell
+	path = cfg/vim/bundle/haskell
 	url = git://github.com/wlangstroth/vim-haskell.git
 [submodule "vim/bundle/ruby"]
-	path = vim/bundle/ruby
+	path = cfg/vim/bundle/ruby
 	url = git://github.com/vim-ruby/vim-ruby.git
 [submodule "vim/bundle/javascript"]
-	path = vim/bundle/javascript
+	path = cfg/vim/bundle/javascript
 	url = git://github.com/pangloss/vim-javascript.git
 [submodule "vim/bundle/bubblegum"]
-	path = vim/bundle/bubblegum
+	path = cfg/vim/bundle/bubblegum
 	url = git://github.com/baskerville/bubblegum.git
 [submodule "vim/bundle/solarized"]
-	path = vim/bundle/solarized
+	path = cfg/vim/bundle/solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
 [submodule "vim/bundle/sh"]
-	path = vim/bundle/sh
+	path = cfg/vim/bundle/sh
 	url = git://github.com/vim-scripts/sh.vim.git
 [submodule "vim/bundle/zenburn"]
-	path = vim/bundle/zenburn
+	path = cfg/vim/bundle/zenburn
 	url = git://github.com/jnurmine/Zenburn.git
 [submodule "vim/bundle/autoclose"]
-	path = vim/bundle/autoclose
+	path = cfg/vim/bundle/autoclose
 	url = git://github.com/vim-scripts/AutoClose.git
 [submodule "git-aliae"]
 	path = git-aliae
 	url = git@github.com:ConradIrwin/git-aliae.git
 [submodule "vim/bundle/align"]
-	path = vim/bundle/align
+	path = cfg/vim/bundle/align
 	url = git@github.com:vim-scripts/Align.git
 [submodule "vim/bundle/fuzzy-finder"]
-	path = vim/bundle/fuzzy-finder
+	path = cfg/vim/bundle/fuzzy-finder
 	url = https://github.com/vim-scripts/FuzzyFinder.git
 [submodule "vim/bundle/l9"]
-	path = vim/bundle/l9
+	path = cfg/vim/bundle/l9
 	url = https://github.com/vim-scripts/L9.git
 [submodule "emacs.d/themes/monochrome"]
 	path = emacs.d/themes/monochrome
 	url = git://github.com/fxn/monochrome-theme.el.git
 [submodule "vim/bundle/ragel"]
-	path = vim/bundle/ragel
+	path = cfg/vim/bundle/ragel
 	url = git@github.com:arsenerei/vim-ragel.git
