cfg/tmux.conf: retain $PWD for new panes/windows
This was working before, but the new tmux borked it.

http://unix.stackexchange.com/a/109255

--- a/cfg/tmux.conf
+++ b/cfg/tmux.conf
@@ -47,8 +47,10 @@ bind r source-file ~/.tmux.conf
 unbind ^A
 bind ^A select-pane -t :.+
 
-bind \ split-window
-bind | split-window -h
+unbind c
+bind c new-window -c "#{pane_current_path}"
+bind \ split-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind u
 bind u run tmux-open-url
