cfg/mpd.conf: use pulseaudio

--- a/cfg/mpd.conf
+++ b/cfg/mpd.conf
@@ -15,13 +15,17 @@ input {
 #       proxy_user "user"
 #       proxy_password "password"
 }
-audio_output {
-	type		"alsa"
-	name		"HDA Intel PCH"
+# audio_output {
+# 	type		"alsa"
+# 	name		"HDA Intel PCH"
 ##	device		"hw:0,0"	# optional
 ##	format		"44100:16:2"	# optional
 ##	mixer_type      "hardware"	# optional
 ##	mixer_device	"default"	# optional
 ##	mixer_control	"PCM"		# optional
 ##	mixer_index	"0"		# optional
+#}
+audio_output {
+        type                    "pulse"
+        name                    "MPD PulseAudio Output"
 }
