cfg/mpd.conf: change location

--- a/cfg/mpd.conf
+++ b/cfg/mpd.conf
@@ -1,4 +1,4 @@
-music_directory		"~/Dropbox/music"
+music_directory		"~/Dropbox/audio/music"
 playlist_directory		"~/.mpd/playlists"
 db_file			"~/.mpd/database"
 log_file			"~/.mpd/log"
