--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/bundle/ragel"]
 	path = cfg/vim/bundle/ragel
 	url = git@github.com:arsenerei/vim-ragel.git
+[submodule "cfg/emacs.d/vendor/emacs-crystal-mode"]
+	path = cfg/emacs.d/vendor/emacs-crystal-mode
+	url = https://github.com/jpellerin/emacs-crystal-mode
