tmux: centerise tabs

--- a/cfg/tmux.conf
+++ b/cfg/tmux.conf
@@ -5,6 +5,8 @@ set-option -g status-bg colour0
 set-option -g status-fg colour175
 set-option -g status-attr default
 
+set-option -g status-justify centre
+
 # Window title colours.
 set-window-option -g window-status-fg colour244
 set-window-option -g window-status-bg default
