--- a/cfg/tmux.conf
+++ b/cfg/tmux.conf
@@ -66,3 +66,19 @@ bind -n C-o clear-history
 
 bind Escape copy-mode
 bind p paste-buffer
+
+##
+# Tmux Plugin Manager
+#
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
