tmux: update colours

--- a/cfg/tmux.conf
+++ b/cfg/tmux.conf
@@ -1,36 +1,45 @@
 set -g prefix C-q
 
-# Statusbar colours.
-set-option -g status-bg colour0
-set-option -g status-fg colour175
+# default statusbar colors
+set-option -g status-fg colour250
+set-option -g status-bg colour234
 set-option -g status-attr default
 
-set-option -g status-justify centre
+# default left statusbar colors
+set-option -g status-left-fg colour250
+set-option -g status-left-bg default
+set-option -g status-left-attr default
 
-# Window title colours.
-set-window-option -g window-status-fg colour244
+# default right statusbar colors
+set-option -g status-right-fg colour250
+set-option -g status-right-bg default
+set-option -g status-right-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour240
 set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
 
-# Active window title colours.
-set-window-option -g window-status-current-fg colour215
+# active window title colors
+set-window-option -g window-status-current-fg colour252
 set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-attr default
 
-# Pane border.
-set-option -g pane-border-fg colour4
-set-option -g pane-active-border-fg colour1
+# pane border
+set-option -g pane-border-fg colour235
+set-option -g pane-active-border-fg colour250
 
-# Message text.
-set-option -g message-bg colour235
-set-option -g message-fg colour254
+# message text
+set-option -g message-fg colour232
+set-option -g message-bg colour32
 
-# Pane number display
-set-option -g display-panes-active-colour colour33
-set-option -g display-panes-colour colour166
+# pane number display
+# set-option -g display-panes-active-colour colour32
+# set-option -g display-panes-colour colour166
 
-# Clock
-set-window-option -g clock-mode-colour colour1
+set-option -g mode-fg colour232
+set-option -g mode-bg colour32
+
+set-option -g status-justify centre
 
 set-window-option -g mode-keys vi
 
