--- a/cfg/tmux.conf
+++ b/cfg/tmux.conf
@@ -83,5 +83,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
