tmux: migrate config to v2.8 style

--- a/files/tmux/.tmux.conf
+++ b/files/tmux/.tmux.conf
@@ -1,43 +1,32 @@
 set -g prefix C-q
 
 # default statusbar colors
-set-option -g status-fg colour250
-set-option -g status-bg colour234
-set-option -g status-attr default
+set-option -g status-style fg=colour250,bg=colour234,default
 
 # default left statusbar colors
-set-option -g status-left-fg colour250
-set-option -g status-left-bg default
-set-option -g status-left-attr default
+set-option -g status-left-style fg=colour250,bg=default,default
 
 # default right statusbar colors
-set-option -g status-right-fg colour250
-set-option -g status-right-bg default
-set-option -g status-right-attr default
+set-option -g status-right-style fg=colour250,bg=default,default
 
 # default window title colors
-set-window-option -g window-status-fg colour252
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=colour252,bg=default
 
 # active window title colors
-set-window-option -g window-status-current-fg colour5
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr default
+set-window-option -g window-status-current-style fg=colour5,bg=default,default
 
 # pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour250
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour250
 
 # message text
-set-option -g message-fg colour232
-set-option -g message-bg colour32
+set-option -g message-style fg=colour232,bg=colour32
 
 # pane number display
 # set-option -g display-panes-active-colour colour32
 # set-option -g display-panes-colour colour166
 
-set-option -g mode-fg colour232
-set-option -g mode-bg colour32
+set-option -g mode-style fg=colour232,bg=colour32
 
 set-option -g status-justify centre
 
@@ -54,7 +43,7 @@ bind ^A select-pane -t :.+
 
 unbind c
 bind c new-window -c "#{pane_current_path}"
-bind \ split-window -c "#{pane_current_path}"
+bind \\ split-window -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
 unbind u
