tmux: incredible fixes

--- a/files/tmux/.tmux.conf
+++ b/files/tmux/.tmux.conf
@@ -1,19 +1,19 @@
 set -g prefix C-q
 
 # default statusbar colors
-set-option -g status-style fg=colour250,bg=colour234,default
+set-option -g status-style fg=colour250,bg=colour234
 
 # default left statusbar colors
-set-option -g status-left-style fg=colour250,bg=default,default
+set-option -g status-left-style fg=colour250,bg=default
 
 # default right statusbar colors
-set-option -g status-right-style fg=colour250,bg=default,default
+set-option -g status-right-style fg=colour250,bg=default
 
 # default window title colors
 set-window-option -g window-status-style fg=colour252,bg=default
 
 # active window title colors
-set-window-option -g window-status-current-style fg=colour5,bg=default,default
+set-window-option -g window-status-current-style fg=colour5,bg=default
 
 # pane border
 set-option -g pane-border-style fg=colour235
@@ -23,8 +23,8 @@ set-option -g pane-active-border-style fg=colour250
 set-option -g message-style fg=colour232,bg=colour32
 
 # pane number display
-# set-option -g display-panes-active-colour colour32
-# set-option -g display-panes-colour colour166
+set-option -g display-panes-active-colour colour32
+set-option -g display-panes-colour colour166
 
 set-option -g mode-style fg=colour232,bg=colour32
 
