tmux: fix colors

--- a/files/tmux/.tmux.conf
+++ b/files/tmux/.tmux.conf
@@ -16,8 +16,8 @@ set-window-option -g window-status-style fg=colour252,bg=default
 set-window-option -g window-status-current-style fg=colour5,bg=default
 
 # pane border
-set-option -g pane-border-style fg=colour235
-set-option -g pane-active-border-style fg=colour250
+set-option -g pane-border-style fg=colour235,bg=default
+set-option -g pane-active-border-style fg=colour250,bg=default
 
 # message text
 set-option -g message-style fg=colour232,bg=colour32
@@ -72,7 +72,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
