git: add "git-delta" and configure it

--- a/files/git/.gitconfig
+++ b/files/git/.gitconfig
@@ -44,3 +44,24 @@
 	sync = codereview sync
 [push]
 	default = current
+
+# git-delta options
+
+[pager]
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    features = line-numbers decorations
+    whitespace-error-style = 22 reverse
+    syntax-theme = zenburn
+
+[delta "decorations"]
+    commit-decoration-style = bold yellow box ul
+    file-style = bold yellow ul
+    file-decoration-style = none
